# OpenFlux

./: .gitignore  .opencodeignore.example  ARCHITECTURE.md  BUILD_GUIDE.md  DEBUG_REPORT.md  INSTALL_FIX.md  INTEGRATION.md  LICENSE  QUICKSTART.md  README.md  USAGE_GUIDE.md  requirements-optional.txt  requirements.txt
.github/: TOPICS.txt
.github/workflows/: release.yml
core/api/: server.py
core/indexer/: __init__.py  engine.py
core/orchestrator/: __init__.py  agent.py
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: BACKEND.md  BRANDING.md  OPENCODE_ANALYSIS.md  STANDALONE_APP_LIKE_OPENCODE.md  STANDALONE_IDE_ROADMAP.md  STRATEGY.md
extensions/opencode-ai-tools/: README.md  package.json
extensions/opencode-theme-scarlet-jade/: README.md  package.json
extensions/openflux-ai-tools/: README.md  package-lock.json  package.json
extensions/openflux-theme-scarlet-jade/: README.md  package.json
scripts/: debug_check.py  install_and_run.sh  install_backend_service.sh  quick_start.sh  run_backend_entry.py  run_tests.sh  start_server.sh
scripts/setup/: install_deps.sh
shell/: README.md
shell/branding/: README.md  product.json
shell/patches/: README.md  build-add-post-prepare.patch
shell/scripts/: README.md  bundle_extensions.sh  (+5 more)
tests/: test_indexer.py  test_orchestrator.py
(+14 files in other folders)
