[package]
name = "openflux-desktop"
version = "0.1.0"
description = "OpenFlux Desktop — one window, connect to backend"
authors = ["OpenFlux"]
edition = "2021"

[lib]
name = "openflux_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
